--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,6 +7,24 @@ body
     margin: 0;
     padding: 0;
 }
+#cabecera
+{
+    background-color: rgb(36, 36, 96);
+    box-shadow: 0px 2px 20px 0px rgb(37, 37, 37);
+    color: whitesmoke;
+    font-weight: bold;
+    margin: 0;
+    padding: 0, 5em;
+}
+
+
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0 0em;
+}
+
 #container
 {
     width: 70%;
