--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body
 {
+    background: rgb(124, 120, 120);
     color: #333;
     text-align: center;
     font-family: "Arial";
@@ -9,14 +10,19 @@ body
 }
 #cabecera
 {
-    background-color: rgb(36, 36, 96);
+    background: url("../imagenes/dragon.png") 10px 10px;
     box-shadow: 0px 2px 20px 0px rgb(37, 37, 37);
     color: whitesmoke;
     font-weight: bold;
     margin: 0;
-    padding: 0, 5em;
+    padding: 05em 0 0.5em 2em;
 }
 
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
+}
 
 #cabecera #tagline
 {
@@ -37,4 +43,11 @@ body
 #container h1
 {
     font-size: 20px;
+}
+
+#post
+{
+    
+    background: white;
+    padding: 1em;
 }
