--- a/css/estilos.css
+++ b/css/estilos.css
@@ -38,3 +38,11 @@ body
 {
     font-size: 20px;
 }
+
+
+#footer {
+    background-color: rgb(37, 38, 38);
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}
